--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>rss-project</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+    />
   </head>
   <body class="d-flex flex-column miv-vh-100">
     <main class="flex-grow-1">
-      <section class="container-fluid">
+      <!-- <section class="container-fluid">
         <div class="row">
           <form class="rss-form text-body mt-5">
             <div class="row">
-              <p>http://lorem-rss.herokuapp.com/feed</p>
+              <p>http://lorem-rss.herokuapp.com/feed?unit=second&interval=10</p>
               <div class="col">
                 <div class="form-floating">
                   <input
@@ -27,13 +31,54 @@
                 <button
                   type="submit"
                   aria-label="add"
-                  class="h-100 btn btn-lg btn-primary px-sm-5"
+                  class="h-100 btn btn-lg btn-dark px-sm-5"
                 >
                   Добавить
                 </button>
               </div>
             </div>
           </form>
+        </div>
+      </section> -->
+      <section class="container-fluid bg-dark p-5">
+        <div class="row">
+          <div class="col-md-10 col-lg-8 mx-auto text-white">
+            <h1 class="display-4">RSS is beautiful</h1>
+            <p class="lead">
+              Начните читать RSS сегодня! Это легко, это красиво.
+            </p>
+            <form action="" class="rss-form text-body">
+              <div class="row">
+                <div class="col">
+                  <div class="form-floating">
+                    <input
+                      id="url-input"
+                      autofocus=""
+                      required=""
+                      name="url"
+                      aria-label="url"
+                      class="form-control w-100"
+                      placeholder="ссылка RSS"
+                      autocomplete="off"
+                    />
+                    <label for="url-input">Ссылка RSS</label>
+                  </div>
+                </div>
+                <div class="col-auto">
+                  <button
+                    type="submit"
+                    aria-label="add"
+                    class="h-100 btn btn-lg btn-gradient px-sm-5"
+                  >
+                    Добавить
+                  </button>
+                </div>
+              </div>
+            </form>
+            <p class="mt-2 mb-0 text-muted">
+              Пример: https://ru.hexlet.io/lessons.rss
+            </p>
+          </div>
         </div>
       </section>
       <section class="container-fluid">
