--- a/public/index.html
+++ b/public/index.html
@@ -4,42 +4,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>rss-project</title>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
-    />
   </head>
   <body class="d-flex flex-column miv-vh-100">
     <main class="flex-grow-1">
-      <!-- <section class="container-fluid">
-        <div class="row">
-          <form class="rss-form text-body mt-5">
-            <div class="row">
-              <p>http://lorem-rss.herokuapp.com/feed?unit=second&interval=10</p>
-              <div class="col">
-                <div class="form-floating">
-                  <input
-                    id="rss-url-input"
-                    name="url"
-                    class="form-control w-100"
-                    placeholder="ссылка RSS"
-                  />
-                  <label for="rss-url-input">Ссылка RSS</label>
-                </div>
-              </div>
-              <div class="col-auto">
-                <button
-                  type="submit"
-                  aria-label="add"
-                  class="h-100 btn btn-lg btn-dark px-sm-5"
-                >
-                  Добавить
-                </button>
-              </div>
-            </div>
-          </form>
-        </div>
-      </section> -->
       <section class="container-fluid bg-dark p-5">
         <div class="row">
           <div class="col-md-10 col-lg-8 mx-auto text-white">
@@ -87,6 +54,50 @@
           <div class="col-md-10 posts"></div>
         </div>
       </section>
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#exampleModal"
+      >
+        Launch demo modal
+      </button>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">...</div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-bs-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
