--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,39 @@
     <title>rss-project</title>
   </head>
   <body class="d-flex flex-column miv-vh-100">
+    <div
+      class="modal fade"
+      id="modal"
+      tabindex="-1"
+      aria-labelledby="modalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="modalLabel">Modal title</h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">...</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <main class="flex-grow-1">
       <section class="container-fluid bg-dark p-5">
         <div class="row">
@@ -42,7 +75,7 @@
                 </div>
               </div>
             </form>
-            <p class="mt-2 mb-0 text-muted">
+            <p class="example-link mt-2 mb-0 text-muted">
               Пример: https://ru.hexlet.io/lessons.rss
             </p>
           </div>
@@ -50,54 +83,10 @@
       </section>
       <section class="container-fluid">
         <div class="row">
-          <div class="col-md-10 feeds"></div>
-          <div class="col-md-10 posts"></div>
+          <div class="col-md-10 px-5 feeds"></div>
+          <div class="col-md-10 px-5 posts"></div>
         </div>
       </section>
-      <button
-        type="button"
-        class="btn btn-primary"
-        data-bs-toggle="modal"
-        data-bs-target="#exampleModal"
-      >
-        Launch demo modal
-      </button>
-
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="exampleModal"
-        tabindex="-1"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">...</div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Save changes
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
     </main>
   </body>
 </html>
