--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>rss-project</title>
+    <title>RSS Reader</title>
   </head>
   <body class="d-flex flex-column miv-vh-100">
     <div
@@ -81,10 +81,12 @@
           </div>
         </div>
       </section>
-      <section class="container-fluid">
+      <section class="container-fluid container-xxl p-5">
         <div class="row">
-          <div class="col-md-10 px-5 feeds"></div>
-          <div class="col-md-10 px-5 posts"></div>
+          <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
+          <div
+            class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"
+          ></div>
         </div>
       </section>
     </main>
