--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="modalLabel">Modal title</h1>
+            <h1 class="modal-title fs-5" id="modalLabel">title</h1>
             <button
               type="button"
               class="btn-close"
@@ -24,16 +24,23 @@
               aria-label="Close"
             ></button>
           </div>
-          <div class="modal-body">...</div>
+          <div class="modal-body">desciption</div>
           <div class="modal-footer">
+            <a
+              type="button"
+              class="btn btn-primary full-article"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              Читать полностью
+            </a>
             <button
               type="button"
               class="btn btn-secondary"
               data-bs-dismiss="modal"
             >
-              Close
+              Закрыть
             </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
