--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@
             <p class="example-link mt-2 mb-0 text-muted">
               Пример: https://ru.hexlet.io/lessons.rss
             </p>
+            <div class="feedback m-0 small position-absolute"></div>
           </div>
         </div>
       </section>
