--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- add Inter font from google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet" />
     <title>RSS Reader</title>
   </head>
   <body class="d-flex flex-column miv-vh-100">
@@ -11,8 +17,7 @@
       id="modal"
       tabindex="-1"
       aria-labelledby="modalLabel"
-      aria-hidden="true"
-    >
+      aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
@@ -21,8 +26,7 @@
               type="button"
               class="btn-close"
               data-bs-dismiss="modal"
-              aria-label="Close"
-            ></button>
+              aria-label="Close"></button>
           </div>
           <div class="modal-body">desciption</div>
           <div class="modal-footer">
@@ -30,15 +34,13 @@
               type="button"
               class="btn btn-primary full-article"
               target="_blank"
-              rel="noopener noreferrer"
-            >
+              rel="noopener noreferrer">
               Читать полностью
             </a>
             <button
               type="button"
               class="btn btn-secondary"
-              data-bs-dismiss="modal"
-            >
+              data-bs-dismiss="modal">
               Закрыть
             </button>
           </div>
@@ -50,7 +52,7 @@
       <section class="container-fluid bg-dark p-5">
         <div class="row">
           <div class="col-md-10 col-lg-8 mx-auto text-white">
-            <h1 class="display-4">RSS is beautiful</h1>
+            <h1 class="display-4 fw-bold">RSS is beautiful</h1>
             <p class="lead">
               Начните читать RSS сегодня! Это легко, это красиво.
             </p>
@@ -65,8 +67,7 @@
                       aria-label="url"
                       class="form-control w-100"
                       placeholder="ссылка RSS"
-                      autocomplete="off"
-                    />
+                      autocomplete="off" />
                     <label for="url-input">Ссылка RSS</label>
                   </div>
                 </div>
@@ -74,8 +75,7 @@
                   <button
                     type="submit"
                     aria-label="add"
-                    class="h-100 btn btn-lg btn-gradient px-sm-5"
-                  >
+                    class="h-100 btn btn-primary btn-lg px-sm-5">
                     Добавить
                   </button>
                 </div>
@@ -92,8 +92,7 @@
         <div class="row">
           <div class="col-md-10 col-lg-8 order-1 mx-auto posts"></div>
           <div
-            class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"
-          ></div>
+            class="col-md-10 col-lg-4 mx-auto order-0 order-lg-1 feeds"></div>
         </div>
       </section>
     </main>
