fix: change example link, posts render above

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
               </div>
             </form>
             <p class="example-link mt-2 mb-0 text-muted">
-              Пример: https://ru.hexlet.io/lessons.rss
+              Пример: https://feeds.simplecast.com/54nAGcIl
             </p>
             <div class="feedback m-0 small position-absolute"></div>
           </div>
