--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- add Inter font from google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet" />
+
+    <style data-no-js>
+      body {
+        display: none;
+      }
+    </style>
+
     <title>RSS Reader</title>
   </head>
   <body class="d-flex flex-column miv-vh-100">
